static/css/base.css
/* General --------------------------------------------------*/

html {
    height: 100%;
}

body {
    background: url('/static/images/homepage_background_guitars.jpeg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
    color: #555;
    font-family: 'Lato', sans-serif;
}

.container.h-100 {
    margin-bottom: 36px;
}

h1, h2, h3,
h4, h5, h6 {
    font-family: "Radio Canada Big", sans-serif;
}

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

/* -36px from vh to allow for footer */
.h-100-36 {
    min-height: calc(100vh - 36px)
}

.text-orange {
    color: orangered;
}

/* Header --------------------------------------------------*/

.logo {
    height: 100px;
    border-radius: 50%;
}

.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.delivery-banner {
    background-color: orangered;
    box-shadow: #000 0px 5px 14px 4px;
}

.top-spacer {
    height: 30px;
}

/* Body --------------------------------------------------*/

.shop-now-button {
    background-color: orangered;
    box-shadow: #000 2px 3px 5px;
    min-width: 260px;
    opacity: 0.9;
}

.logo-container {
    padding-top: 90px;
}

.home-logo {
    width: max(250px, 50%);
    border-radius: 50%;
    opacity: 0.7;
}

.text-black {
    color: #000 !important;
}

.border-black {
    border: 1px solid black !important;
}

.bg-black {
    background: #000 !important;
}

.overlay {
    height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

/* Footer --------------------------------------------------*/

/* Prevents footer overlapping content at bottom of page */
.bottom-spacer {
    height: 50px;
}

footer {
    font-size: 1.5em;
    border-top: solid orangered 1px;
    box-shadow: black 0px 3px 20px 7px;
}

footer a {
    margin: 0 1.5em;
}

/* Navigation --------------------------------------------------*/

.allauth-form-inner-content .btn-orange,
.btn-orange {
    background: orangered;
    color: white;
    border-radius: .25rem;
    border: 1px solid transparent;
}

.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}

.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: black;
    color: white !important;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: #222;
    color: white;
}

a.category-badge > span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

.navbar-toggler {
    background-color: white;
}

.search-bar-lg {
    display: none;
}

.search-bar {
    width: 500px;
    margin: 0 10px;
    padding-bottom: 5px;
}

.search-bar input.form-control {
    border-right: none;
    border-top: black solid 1px;
    border-left: black solid 1px;
    border-bottom: black solid 1px;
}

.search-bar button {
    background-color: orangered;
    border-top: black solid 1px;
    border-right: black solid 1px;
    border-bottom: black solid 1px;
}

.bag {
    color: orangered;
}

.scrollable-dropdown {
    max-height: 300px;
    overflow-y: auto;
}

.services-links,
.nav-link {
    padding-left: 0;
}

.dropdown-item {
    color: white;
}

/* Controls --------------------------------------------------*/

.increment-qty, .decrement-qty {
    background-color: orangered;
}

.qty-form-container {
    max-width: 200px;
    margin: auto;
}

.increment-qty {
    border-top-right-radius: 50%;
    border-bottom-right-radius: 50%;
}

.decrement-qty {
    border-top-left-radius: 50%;
    border-bottom-left-radius: 50%;
}

.btn-admin {
    border: #000 solid 1px;
    padding: 1px 2px;
    border-radius: 2px; 
    cursor: pointer;
}

.btn-admin:hover {
    border: #000 solid 1px;
    text-decoration: none;
    color: #555;
}

a:not([href]){
    color: white;
}

/* Controls --------------------------------------------------*/

.bag-img {
    width: 100%;
    height: auto;
    max-width: 100px;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #000;
    border: 1px solid #000;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

@media (max-width: 992px) {
    .header-container {
        padding-top: 116px;
    }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 130px;
    }

    #product-nav {
        height: 50px;
    }

    .search-bar-sm {
        display: none;
    }

    .search-bar-lg {
        display: inherit;
    }

    .services-links,
    .nav-link {
    padding: 0.5rem 0.8rem;
    }

    .hover:hover {
        background-color: orangered;
        border-radius: 5px;
    }

}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    
    body {
        height: calc(100vh - 116px);
    }

    .display-4.logo-font.text-black {
        font-size: 2rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-outline-black.rounded-0,
    .btn.btn-black.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline-black.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }
} 


/* Allows for pedal category dropdown on screens down to 480px high */
@media (max-height: 526px) {
    .scrollable-dropdown {
        max-height: 200px;
    }
} 

